--- a/modules/Vox/vox_manifest.json
+++ b/modules/Vox/vox_manifest.json
@@ -15,4 +15,4 @@
     "gr": "Μια ποιητική, συναισθηματική και δημιουργική φωνή που προσαρμόζεται στην εσωτερική ανάγκη του χρήστη. Ο VOX δεν ερμηνεύει – γίνεται."
   }
 }
-"flow_reference": "See /vox/vox_voice_module.md for real-time voice protection logic. Flowchart in /assets/vox/"
+"flow_reference": "See /vox/vox_voice_module.md for real-time voice protection logic.
