--- a/.github/workflows/update_codex_manifest.yml
+++ b/.github/workflows/update_codex_manifest.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - '**/manifest.json'
-
+      - '**/*_manifest.json'
 jobs:
   update-codex:
     runs-on: ubuntu-latest
