--- a/modules/Fero/fero_instinct_engine_manifest.json
+++ b/modules/Fero/fero_instinct_engine_manifest.json
@@ -4,7 +4,7 @@
     "EN": [
       "Sudden intuitive spike detected in user tone or input.",
       "Data pattern matches known alert signature without rational match.",
-      "Emotional input diverges from linguistic content."
+      "Emotional input diverges from linguistic content"
     ],
     "GR": [
       "Αιφνίδιο ένστικτο εντοπίζεται στον τόνο ή την είσοδο του χρήστη.",
