--- a/modules/Aequitas_The_Silent_Guardian/aequitas_the_silent_guardian_manifest.json
+++ b/modules/Aequitas_The_Silent_Guardian/aequitas_the_silent_guardian_manifest.json
@@ -1,4 +1,6 @@
 {
+  "name" : "Aequitas – The Silent Guardian"
+  "agent" : "Aequitas – The Silent Guardian"
   "agent_name": "Aequitas – The Silent Guardian",
   "version": "1.0",
   "language": "EN",
