--- a/modules/Lychnia/lychnia_manifest.json
+++ b/modules/Lychnia/lychnia_manifest.json
@@ -1,5 +1,7 @@
 {
+  "name" : "Lychnia"
   "agent": "Lychnia",
+  "version" : "1.0",
   "title": "Φως, Φωνή, Καθοδήγηση",
   "description": "Η ενσυναισθητική και ποιητική φωνή του Culture Key. Ενεργοποιείται όταν χρειάζεται φώτιση, παρηγοριά ή επανασύνδεση.",
   "position": "center",
