--- a/modules/Fero/fero_instinct_engine_manifest.json
+++ b/modules/Fero/fero_instinct_engine_manifest.json
@@ -1,4 +1,11 @@
 {
+  "name": "Fero ",
+  "agent": "Fero",
+  "version": "1.0",
+  "description": {
+    "en": "Detects and responds to sudden instinctive signals and subconscious alerts in user input. Collaborates with Silon, Lychnia, and Shadow Key.",
+    "gr": "Ανιχνεύει και ανταποκρίνεται σε ξαφνικά ενστικτώδη σήματα και υποσυνείδητα alerts στην είσοδο του χρήστη. Συνεργάζεται με τους Silon, Lychnia και Shadow Key."
+  },
   "module": "Fero Instinct Engine",
   "activation_conditions": {
     "EN": [
