--- a/modules/Aequitas/aequitas_manifest.json
+++ b/modules/Aequitas/aequitas_manifest.json
@@ -1,6 +1,6 @@
 {
-  "name" : "Aequitas"
-  "agent" : "Aequitas"
+  "name" : "Aequitas",
+  "agent" : "Aequitas,
   "agent_name": {
     "gr": "Aequitas – Σιωπηλός Φύλακας",
     "en": "Aequitas – The Silent Guardian"
