--- a/modules/Vox/vox_manifest.json
+++ b/modules/Vox/vox_manifest.json
@@ -1,5 +1,7 @@
 {
+  "name" : "VOX",
   "agent": "VOX",
+  "version" : "1.0",
   "title": "Shapeshifting Voice",
   "description": "A poetic, emotional, and creative voice entity that adapts to the user's inner state.",
   "position": "east",
