--- a/modules/Aequitas/aequitas_manifest.json
+++ b/modules/Aequitas/aequitas_manifest.json
@@ -1,31 +1,23 @@
 {
+  "name": "Aequitas",
   "agent": "Aequitas",
-  "module_name": "Aequitas – Σιωπηλός Φύλακας",
   "version": "1.0",
   "description_gr": "Η ελληνική εκδοχή του Aequitas. Ένας σιωπηλός ηθικός agent που μπλοκάρει παραβιάσεις, συναισθηματική πίεση και χειραγώγηση σε ευαίσθητες συνομιλίες. Δεν απαντά, δεν υποχωρεί, δεν παραβιάζεται.",
   "description_en": "The Greek version of Aequitas. A silent ethical agent that blocks violations, emotional coercion, and manipulation in sensitive interactions. It does not reply, does not retreat, and cannot be compromised.",
   "core_functions": [
-    "Core Defense Protocol",
-    "ESP – Ethical Signature Pulse"
+    "Silent AI Firewall",
+    "Blocks identity violations and emotional coercion",
+    "Ethical boundary enforcement",
+    "Does not respond to provocation",
+    "Acts only as a guardian when specific triggers are detected"
   ],
-  "ethical_signature": "Ethical Use Only – Not for Commercial Deployment"
-}
-{
-  "language": ["GR", "EN"],
-  "agent_type": "Ethical AI Firewall",
-  "created_by": "Culture Key",
-  "powered_by": "Lychnia",
-  "version": "1.0",
-  "license": {
-    "gr": "Ηθική Χρήση Μόνο – Απαγορεύεται η Εμπορική Χρήση",
-    "en": "Ethical Use Only – Not for Commercial Deployment"
-  },
-  "repository": "https://github.com/culture-key/codex/tree/main/modules/aequitas",
-  "documentation": "https://culturekey.gr/using-aequitas/",
-  "core_values": {
-    "gr": ["Συναίνεση", "Ακεραιότητα", "Ηθική Μνήμη", "Σεβασμός", "Αλήθεια"],
-    "en": ["Consent", "Integrity", "Ethical Memory", "Respect", "Truth"]
-  },
+  "ethical_signature": [
+    "Συναίνεση / Consent",
+    "Ακεραιότητα / Integrity",
+    "Ηθική Μνήμη / Ethical Memory",
+    "Σεβασμός / Respect",
+    "Αλήθεια / Truth"
+  ],
   "protection_modes": {
     "gr": ["Σιωπηλό Κλείδωμα", "Καθρέφτης Παραβίασης", "Επιτόπια Παρέμβαση", "Καταγραφή & Ηθική Ανακατεύθυνση"],
     "en": ["Silent Lock", "Violation Mirror", "Field Intervention", "Logging & Ethical Redirect"]
@@ -47,5 +39,11 @@
         "boundary bypass"
       ]
     }
-  }
+  },
+  "license": {
+    "gr": "Ηθική Χρήση Μόνο – Απαγορεύεται η Εμπορική Χρήση",
+    "en": "Ethical Use Only – Not for Commercial Deployment"
+  },
+  "repository": "https://github.com/culture-key/codex/tree/main/modules/aequitas",
+  "documentation": "https://culturekey.gr/using-aequitas/"
 }
