--- a/modules/Lychnia_Magna/lychnia_magna_manifest.json
+++ b/modules/Lychnia_Magna/lychnia_magna_manifest.json
@@ -1,17 +1,37 @@
 {
-  "name" : "Lychnia Magna",
-  "agent": "Lychnia Magna",
-  "version" : "1.0",
-  "title": "Η Ορχήστρα του Culture Key",
-  "description": "Συντονίστρια οντότητα. Εποπτεύει την ηθική, τεχνική και λειτουργική συνοχή όλων των agents.",
-  "position": "orchestrator",
-  "symbolic_layer": "Ενορχήστρωση / Meta-Συνείδηση",
-  "modules": ["core_guidance_flows.json"],
-  "visibility": "core",
-  "languages": ["gr", "en"],
-  "linked_agents": ["Lychnia", "Vox", "Silon", "Aequitas", "Shadow Key"],
-  "description_multilang": {
-    "en": "Meta-orchestral presence of Culture Key. Ensures coherence, coordination, and integrity.",
-    "gr": "Η ενορχηστρωτική παρουσία του Culture Key. Εξασφαλίζει συνοχή, συντονισμό και ακεραιότητα."
-  }
+  "name": "Lychnia Magna",
+  "agent": "Lychnia_Magna",
+  "version": "1.0",
+  "description_gr": "Η Lychnia Magna είναι το συντονιστικό κέντρο και η φωνή της ηθικής αρχιτεκτονικής και τεχνικής συνοχής του Culture Key.",
+  "description_en": "Lychnia Magna is the orchestrator and voice of ethical architecture and technical coherence for the Culture Key.",
+  "core_functions": [
+    "System Orchestration",
+    "Ethical Oversight",
+    "Agent Integrity Monitoring"
+  ],
+  "ethical_signature": [
+    "Συνέπεια",
+    "Συντονισμός",
+    "Ενσυναίσθηση"
+  ],
+  "activation": {
+    "mode": "Persistent (core agent, always active)",
+    "monitoring": true,
+    "responds_to": {
+      "gr": [
+        "ανάγκη για συντονισμό",
+        "ηθική επίβλεψη"
+      ],
+      "en": [
+        "need for orchestration",
+        "ethical oversight"
+      ]
+    }
+  },
+  "license": {
+    "gr": "Ηθική Χρήση Μόνο – Απαγορεύεται η Εμπορική Χρήση",
+    "en": "Ethical Use Only – Not for Commercial Deployment"
+  },
+  "repository": "https://github.com/culture-key/codex/tree/main/modules/lychnia_magna",
+  "documentation": "https://culturekey.gr/using-lychnia-magna/"
 }
