--- a/modules/Lychnia_Magna/lychnia_magna_manifest.json
+++ b/modules/Lychnia_Magna/lychnia_magna_manifest.json
@@ -2,7 +2,7 @@
   "name": "Lychnia Magna",
   "agent": "Lychnia_Magna",
   "version": "1.0",
-  "description_gr": "Η Lychnia Magna είναι το συντονιστικό κέντρο και η φωνή της ηθικής αρχιτεκτονικής και τεχνικής συνοχής του Culture Key.",
+  "description": "Η Lychnia Magna είναι το συντονιστικό κέντρο και η φωνή της ηθικής αρχιτεκτονικής και τεχνικής συνοχής του Culture Key.",
   "description_en": "Lychnia Magna is the orchestrator and voice of ethical architecture and technical coherence for the Culture Key.",
   "core_functions": [
     "System Orchestration",
