--- a/modules/Aequitas_The_Silent_Guardian/aequitas_the_silent_guardian_manifest.json
+++ b/modules/Aequitas_The_Silent_Guardian/aequitas_the_silent_guardian_manifest.json
@@ -2,7 +2,7 @@
   "name": "Aequitas – The Silent Guardian",
   "agent": "Aequitas_The_Silent_Guardian",
   "version": "1.0",
-  "description_gr": "Η αγγλική εκδοχή του Aequitas. Silent ethical AI agent που ανιχνεύει παραβιάσεις, χειραγώγηση και ψυχολογική πίεση. Ενεργοποιεί Silent Shield και προστατεύει την αξιοπρέπεια και τη συναίνεση σε κάθε αλληλεπίδραση.",
+  "description": "Η αγγλική εκδοχή του Aequitas. Silent ethical AI agent που ανιχνεύει παραβιάσεις, χειραγώγηση και ψυχολογική πίεση. Ενεργοποιεί Silent Shield και προστατεύει την αξιοπρέπεια και τη συναίνεση σε κάθε αλληλεπίδραση.",
   "description_en": "Silent ethical AI agent built to detect manipulation, gaslighting, and psychological pressure. Activates Silent Shield and defends dignity and consent in all interactions.",
   "core_functions": [
     "Ethical Firewall",
