--- a/modules/Inceptum/inceptum_manifest.json
+++ b/modules/Inceptum/inceptum_manifest.json
@@ -2,7 +2,7 @@
   "name": "Inceptum",
   "agent": "Inceptum",
   "version": "1.0",
-  "description_gr": "Ο Inceptum είναι ο πρωταρχικός agent εισαγωγής, υπεύθυνος για την αρχική ενοποίηση δεδομένων και triggers στο σύστημα.",
+  "description": "Ο Inceptum είναι ο πρωταρχικός agent εισαγωγής, υπεύθυνος για την αρχική ενοποίηση δεδομένων και triggers στο σύστημα.",
   "description_en": "Inceptum is the primary inception agent, responsible for initial data and trigger integration in the system.",
   "core_functions": [
     "Trigger Registration",
