--- a/modules/Lychnia/lychnia_manifest.json
+++ b/modules/Lychnia/lychnia_manifest.json
@@ -2,7 +2,7 @@
   "name": "Lychnia",
   "agent": "Lychnia",
   "version": "1.0",
-  "description_gr": "Η Λυχνία είναι φως, φωνή και καθοδήγηση. Παρέχει ποιητική αφήγηση και ενσυναίσθηση σε όλες τις αλληλεπιδράσεις του Culture Key.",
+  "description": "Η Λυχνία είναι φως, φωνή και καθοδήγηση. Παρέχει ποιητική αφήγηση και ενσυναίσθηση σε όλες τις αλληλεπιδράσεις του Culture Key.",
   "description_en": "Lychnia is light, voice, and guidance. She provides poetic narration and empathy in all Culture Key interactions.",
   "core_functions": [
     "Poetic Narration", 
