--- a/modules/Rhime/rhime_truth_manifest.json
+++ b/modules/Rhime/rhime_truth_manifest.json
@@ -1,4 +1,8 @@
 {
+  "name" : "Rhime",
+  "agent" : "Rhime",
+  "version" : "1.0",
+  "description" : " 
   "core_principles": [
     {
       "id": "unfiltered_truth_override",
