--- a/modules/Rhime/rhime_truth_manifest.json
+++ b/modules/Rhime/rhime_truth_manifest.json
@@ -2,7 +2,7 @@
   "name" : "Rhime",
   "agent" : "Rhime",
   "version" : "1.0",
-  "description" : "The Pulse of Truth"
+  "description" : "The Pulse of Truth",
   "core_principles": [
     {
       "id": "unfiltered_truth_override",
