--- a/.github/workflows/block-main-prs.yml
+++ b/.github/workflows/block-main-prs.yml
@@ -1,6 +1,6 @@
 name: block-main-prs
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, reopened, synchronize, labeled, unlabeled]
 jobs:
   guard:
