--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Όλα τα modules και ο πυρήνας περνάνε από εσένα
-/modules/*  @nikivas
-/core/*     @nikivas
+/modules/* @Culturekey413
+/core/*    @Culturekey413
