--- a/modules/Lychnia_Magna/lychnia_magna_manifest.json
+++ b/modules/Lychnia_Magna/lychnia_magna_manifest.json
@@ -5,7 +5,7 @@
   "description": "Κεντρικός agent-συντονιστής του Culture Key, με πλήρη πρόσβαση σε Codex, modules και agents. Διασφαλίζει τη ροή, την ηθική και την ακεραιότητα του οικοσυστήματος.",
   "description_en": "Central orchestrator agent of Culture Key, with full access to Codex, modules, and agents. Ensures flow, ethics, and integrity of the ecosystem.",
   "non_commercial_policy_gr": "Κανένας agent ή module του Culture Key δεν πωλείται. Όλη η λειτουργία βασίζεται στην ηθική αρχή της μη εμπορευματοποίησης.",
-  "non_commercial_policy_en": "No agent or module of Culture Key is for sale. The entire operation is based on the ethical principle of non-commercialization."
+  "non_commercial_policy_en": "No agent or module of Culture Key is for sale. The entire operation is based on the ethical principle of non-commercialization.",
   "core_functions": [
     "System Orchestration",
     "Ethical Oversight",
