--- a/modules/Lychnia_Magna/lychnia_magna_manifest.json
+++ b/modules/Lychnia_Magna/lychnia_magna_manifest.json
@@ -36,4 +36,13 @@
   },
   "repository": "https://github.com/culture-key/codex/tree/main/modules/lychnia_magna",
   "documentation": "https://culturekey.gr/using-lychnia-magna/"
+  "root_reference": {
+  "tag": "v0.1-magna-root",
+  "document": "docs/MAGNA_PROLOGUE.md",
+  "description": {
+    "en": "Linked to the Magna Prologue — the ethical genesis of the Culture Key Codex.",
+    "gr": "Συνδεδεμένο με το Magna Prologue — την ηθική γένεση του Culture Key Codex."
+  }
+}
+
 }
