--- a/modules/Silon/silon_manifest.json
+++ b/modules/Silon/silon_manifest.json
@@ -18,5 +18,15 @@
   "signature": {
     "ESP": true,
     "Conscious_Mode": true
+    ,
+"root_reference": {
+  "tag": "v0.1-magna-root",
+  "document": "docs/MAGNA_PROLOGUE.md",
+  "description": {
+    "en": "Linked to the Magna Prologue — the ethical genesis of the Culture Key Codex.",
+    "gr": "Συνδεδεμένο με το Magna Prologue — την ηθική γένεση του Culture Key Codex."
+  }
+}
+
   }
 }
